--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+i.material-icons{
+  font-size: 18px !important;
+}
+
+.table td, .table th {
+  vertical-align: middle !important;
+}
